# ConstrainedMarkovModel

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  constrainedmarkov.cpp  constrainedmarkov.h  doxygen.config  main.cpp  utils.cpp  utils.h
data/: Kipling.txt  smalltest.txt  supersmalltest.txt  test.txt
docs/: annotated.html  class_console-members.html  class_console.html  class_constrained_markov_model-members.html  class_constrained_markov_model.html  class_constrained_markov_model__inherit__graph.map  class_constrained_markov_model__inherit__graph.md5  class_debug-members.html  class_debug.html  class_markov_model-members.html  class_markov_model.html  class_mnemonic_markov_model-members.html  class_mnemonic_markov_model.html  class_mnemonic_markov_model__coll__graph.md5  class_mnemonic_markov_model__inherit__graph.map  class_mnemonic_markov_model__inherit__graph.md5  class_options-members.html  class_options.html  classes.html  console_8h_source.html  constrainedmarkov_8h_source.html  debug_8h_source.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  files.html  functions.html  functions_func.html  functions_vars.html  graph_legend.html  hierarchy.html  index.html  inherit_graph_0.map  inherit_graph_1.map  inherit_graph_1.md5  inherit_graph_2.map  inherit_graph_2.md5  inherit_graph_3.map  inherit_graph_3.md5  inherit_graph_4.map  inherit_graph_4.md5  inherits.html  (+5 more)
docs/search/: all_1.js  all_3.js  all_5.js  all_6.js  all_7.js  all_a.js  all_c.js  classes_0.js  classes_2.js  functions_0.js  functions_1.js  functions_2.js  functions_5.js  functions_6.js  functions_7.js  searchdata.js  variables_1.js  variables_2.js  variables_3.js  variables_4.js
input/: fiction_1996_small.txt
libs/: CMakeLists.txt
src/: console.cpp  console.h  constrainedmarkov.cpp  constrainedmarkov.h  debug.cpp  debug.h  main.cpp  main.h  markov.cpp  markov.h  mnemonicmarkov.cpp  mnemonicmarkov.h  options.cpp  options.h  server.cpp  server.h  threadqueue.h  threadqueue.inl  utils.cpp  utils.h  utils.inl
src/models/: constrainedmarkov.cpp  constrainedmarkov.h  markov.cpp  markov.h  markov.inl  mnemonicmarkov.cpp  mnemonicmarkov.h
